--- a/application/pom.xml
+++ b/application/pom.xml
@@ -62,7 +62,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ui.StartUi</mainClass>
+                                    <mainClass>ui.UI</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
